objects/Interest_Shown__c.object
<CustomObject>
    <fields>
        <fullName>Own_Vol_Borough__c</fullName>
        <label>Own Vol - Borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking and Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith and Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington and Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston upon Thames</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Merton</fullName>
                </value>
                <value>
                    <fullName>Newham</fullName>
                </value>
                <value>
                    <fullName>Redbridge</fullName>
                </value>
                <value>
                    <fullName>Richmond upon Thames</fullName>
                </value>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>Sutton</fullName>
                </value>
                <value>
                    <fullName>Tower Hamlets</fullName>
                </value>
                <value>
                    <fullName>Waltham Forest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Own_Vol_Contact_details__c</fullName>
        <inlineHelpText>Own volunteering - contact details</inlineHelpText>
        <label>Own Vol - Contact details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Email__c</fullName>
        <label>Own Vol - Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Manager_s_name__c</fullName>
        <inlineHelpText>Own volunteering - name of manager</inlineHelpText>
        <label>Own Vol - Manager&apos;s name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Number__c</fullName>
        <label>Own Vol - Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Own_Vol_Organisation_name__c</fullName>
        <inlineHelpText>Own volunteering - Name of organisation</inlineHelpText>
        <label>Own Vol - Organisation name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signposting_Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signposting Opportunity ID</label>
        <referenceTo>Volunteering_Opportunity__c</referenceTo>
        <relationshipLabel>Interests Shown</relationshipLabel>
        <relationshipName>Interests_Shown</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signposting_Opportunity_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signposting Opportunity Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signposting_Opportunity_Unpublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signposting Opportunity Unpublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Young_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Young Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interests Shown</relationshipLabel>
        <relationshipName>Interests_Shown</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interest Shown</label>
    <nameField>
        <displayFormat>IS-{0000000}</displayFormat>
        <label>Interest Shown Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests Shown</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Signposting_Opportunity_Unpublished</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Signposting_Opportunity_ID__r.Publish_to_LH_Website__c = FALSE
,
Signposting_Opportunity_Unpublished__c = FALSE
)</errorConditionFormula>
        <errorMessage>This Signposting Opportunity (SO) is not currently published. Interest Shown records must either have Signposting Opportunity Unpublished checked if they are created after SO is unpublished or not be created until after the SO has been published.</errorMessage>
    </validationRules>
</CustomObject>